// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Splash /> should render <AppList /> 1`] = `
Array [
  <div
    style={
      Object {
        "fontSize": "1.5rem",
        "padding": "5px 10px",
      }
    }
  >
    <span
      style={
        Object {
          "color": "red",
        }
      }
    >
      ⚠
    </span>
     
    This project is no longer maintained. If you are interested in working on the project you can still create a fork of it on Github. This web-app will be shut down in February 2023.
    <hr />
  </div>,
  <div
    className="center-content"
  >
    <div
      className="splash"
    >
      <span
        className="SVGInline logo"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<svg class=\\"SVGInline-svg logo-svg\\" data-testid=\\"svg-element\\" />",
          }
        }
      />
      <ul>
        list
      </ul>
    </div>
  </div>,
  <div
    className="cat-with-bubble"
    style={null}
  >
    <span
      className="SVGInline close-me"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<svg class=\\"SVGInline-svg close-me-svg\\" data-testid=\\"svg-element\\" />",
        }
      }
      onClick={[Function]}
      title="Hide cat"
    />
    <span
      className="SVGInline cat"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<svg class=\\"SVGInline-svg cat-svg\\" data-testid=\\"svg-element\\" />",
        }
      }
    />
    <p
      className="bubble"
      onClick={[Function]}
      style={
        Object {
          "width": "7em",
        }
      }
    >
      Click my speech bubble to open the demo app.
    </p>
  </div>,
]
`;

exports[`<Splash /> should render <AppList /> even though error is provided 1`] = `
Array [
  <div
    style={
      Object {
        "fontSize": "1.5rem",
        "padding": "5px 10px",
      }
    }
  >
    <span
      style={
        Object {
          "color": "red",
        }
      }
    >
      ⚠
    </span>
     
    This project is no longer maintained. If you are interested in working on the project you can still create a fork of it on Github. This web-app will be shut down in February 2023.
    <hr />
  </div>,
  <div
    className="center-content"
  >
    <div
      className="splash"
    >
      <span
        className="SVGInline logo"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<svg class=\\"SVGInline-svg logo-svg\\" data-testid=\\"svg-element\\" />",
          }
        }
      />
      <ul>
        list
      </ul>
    </div>
  </div>,
  <div
    className="cat-with-bubble"
    style={null}
  >
    <span
      className="SVGInline close-me"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<svg class=\\"SVGInline-svg close-me-svg\\" data-testid=\\"svg-element\\" />",
        }
      }
      onClick={[Function]}
      title="Hide cat"
    />
    <span
      className="SVGInline cat"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<svg class=\\"SVGInline-svg cat-svg\\" data-testid=\\"svg-element\\" />",
        }
      }
    />
    <p
      className="bubble"
      onClick={[Function]}
      style={
        Object {
          "width": "7em",
        }
      }
    >
      Click my speech bubble to open the demo app.
    </p>
  </div>,
]
`;

exports[`<Splash /> should render <ErrorInfo /> when having error 1`] = `
Array [
  <div
    style={
      Object {
        "fontSize": "1.5rem",
        "padding": "5px 10px",
      }
    }
  >
    <span
      style={
        Object {
          "color": "red",
        }
      }
    >
      ⚠
    </span>
     
    This project is no longer maintained. If you are interested in working on the project you can still create a fork of it on Github. This web-app will be shut down in February 2023.
    <hr />
  </div>,
  <div
    className="center-content"
  >
    <div
      className="splash"
    >
      <span
        className="SVGInline error-logo"
        dangerouslySetInnerHTML={
          Object {
            "__html": "<svg class=\\"SVGInline-svg error-logo-svg\\" data-testid=\\"svg-element\\" />",
          }
        }
      />
      <span>
        Some error
      </span>
    </div>
  </div>,
  <div
    className="cat-with-bubble"
    style={null}
  >
    <span
      className="SVGInline close-me"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<svg class=\\"SVGInline-svg close-me-svg\\" data-testid=\\"svg-element\\" />",
        }
      }
      onClick={[Function]}
      title="Hide cat"
    />
    <span
      className="SVGInline cat"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<svg class=\\"SVGInline-svg cat-svg\\" data-testid=\\"svg-element\\" />",
        }
      }
    />
    <p
      className="bubble"
      onClick={[Function]}
      style={
        Object {
          "width": "7em",
        }
      }
    >
      Click my speech bubble to open the demo app.
    </p>
  </div>,
]
`;
